[gd_scene load_steps=7 format=3 uid="uid://bdgippvovil6d"]

[ext_resource type="Script" path="res://src/pause_menu.gd" id="1_1mvir"]
[ext_resource type="Texture2D" uid="uid://807hahrvk8ko" path="res://resources/textures/menu_back.png" id="1_hnlvf"]
[ext_resource type="Texture2D" uid="uid://6s81oj5knprj" path="res://resources/textures/pause.png" id="2_irssw"]
[ext_resource type="Texture2D" uid="uid://mts4l303hf3k" path="res://resources/textures/b_continue.png" id="4_egcnu"]
[ext_resource type="Texture2D" uid="uid://bpkeeuq0pp1oq" path="res://resources/textures/b_retry_level.png" id="5_libso"]
[ext_resource type="Texture2D" uid="uid://dd5cvc6r6kq0c" path="res://resources/textures/b_back_to_menu.png" id="6_mbfbd"]

[node name="pause_menu" type="Control"]
process_mode = 3
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mvir")

[node name="background" type="Sprite2D" parent="."]
z_index = 50
position = Vector2(400, 300)
texture = ExtResource("1_hnlvf")

[node name="name" type="Sprite2D" parent="."]
z_index = 50
position = Vector2(400, 170)
texture = ExtResource("2_irssw")

[node name="b_continue" type="Button" parent="."]
z_index = 50
layout_mode = 0
offset_left = 346.0
offset_top = 280.0
offset_right = 454.0
offset_bottom = 338.0
icon = ExtResource("4_egcnu")

[node name="b_retry" type="Button" parent="."]
z_index = 50
layout_mode = 0
offset_left = 346.0
offset_top = 378.0
offset_right = 454.0
offset_bottom = 436.0
icon = ExtResource("5_libso")

[node name="b_back_to_menu" type="Button" parent="."]
z_index = 50
layout_mode = 0
offset_left = 346.0
offset_top = 476.0
offset_right = 454.0
offset_bottom = 534.0
icon = ExtResource("6_mbfbd")

[connection signal="pressed" from="b_continue" to="." method="_on_b_continue_pressed"]
[connection signal="pressed" from="b_retry" to="." method="_on_b_retry_pressed"]
[connection signal="pressed" from="b_back_to_menu" to="." method="_on_b_back_to_menu_pressed"]
